--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,86 @@
 <footer class="footer">
-	<div class="footer__container">
-	</div>
+  <div class="footer__up">
+    <div class="footer__container">
+      <div class="footer__body body-footer">
+        <a href="#" class="body-footer__logo">
+          <img src="@img/footer/logo.png" alt="logo" />
+        </a>
+
+        <div class="body-footer__menu menu-footer">
+          <div class="menu-footer__title">О КОМПАНИИ</div>
+          <ul class="menu-footer__list">
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link">Доставка и оплата одежды </a>
+            </li>
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link">Политика конфиденциальности </a>
+            </li>
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link">Опт </a>
+            </li>
+
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link">О Нас </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="body-footer__menu menu-footer">
+          <div class="menu-footer__title">ЗАКАЗЧИКАМ</div>
+          <ul class="menu-footer__list">
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link">Личный кабинет </a>
+            </li>
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link">История заказов </a>
+            </li>
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link">Закладки </a>
+            </li>
+
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link">Возврат товара </a>
+            </li>
+
+            <li class="menu-footer__item">
+              <a href="#" class="menu-footer__link"> Обратная связь </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="body-footer__menu menu-footer">
+          <div class="menu-footer__wrap">
+            <a href="tel:+380683460475" class="menu-footer__tel">+38 068 346 04 75</a>
+
+            <a href="tel:+380664003814" class="menu-footer__tel">+38 066 400 38 14</a>
+          </div>
+
+          <div class="menu-footer__social social-footer">
+            <div class="social-footer__items"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer__down down-footer">
+    <div class="footer__container">
+      <div class="down-footer__wrap">
+        <div class="down-footer__copy">
+          <div class="down-footer__text">© 2020 HECTOR Все права защищены</div>
+          <div class="down-footer__terms">
+            <a href="#" class="down-footer__text"> Политика конфиденциальности | </a>
+
+            <a href="#" class="down-footer__text"> Условия продажи </a>
+          </div>
+        </div>
+
+        <div class="down-footer__design">
+          <div class="down-footer__text">Design and development</div>
+          <div class="down-footer__icon">
+            <img src="@img/footer/logo-galaxy.svg" alt="footer" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
