create section follow

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,72 @@
             </div>
           </div>
         </section>
+
+        <section class="follow">
+          <div class="follow__container">
+            <div class="follow__form">
+              <div class="follow__title">
+                Подпишись и следи за новыми поступлениями и акциями
+              </div>
+              <div class="foolow__wrap">
+                <form action="#" class="follow__label">
+                  <div class="foolow__svg">
+                    <img src="@img/follow/phone.svg" alt="phone" />
+                  </div>
+                  <input
+                    type="phone"
+                    class="follow__input"
+                    id="phone"
+                    placeholder="+38 (___) ___-__-__"
+                  />
+                </form>
+
+                <a href="#" class="follow__button">ПОДПИСАТЬСЯ</a>
+              </div>
+            </div>
+
+            <div class="follow__social social-follow">
+              <div class="follow__title">
+                Или подписаться на наши группы и быть в курсе последних акций
+              </div>
+              <div class="social-follow__items">
+                <div class="social-follow__item">
+                  <a href="#" class="social-follow__link">
+                    <img src="@img/follow/viber.svg" alt="icon" />
+                  </a>
+                </div>
+                <div class="social-follow__item">
+                  <a href="#" class="social-follow__link">
+                    <img src="@img/follow/teleg.svg" alt="icon" />
+                  </a>
+                </div>
+                <div class="social-follow__item">
+                  <a href="#" class="social-follow__link">
+                    <img src="@img/follow/wats.svg" alt="icon" />
+                  </a>
+                </div>
+
+                <div class="social-follow__border"></div>
+
+                <div class="social-follow__item">
+                  <a href="#" class="social-follow__link">
+                    <img src="@img/follow/youtube.svg" alt="icon" />
+                  </a>
+                </div>
+                <div class="social-follow__item">
+                  <a href="#" class="social-follow__link">
+                    <img src="@img/follow/faceb.svg" alt="icon" />
+                  </a>
+                </div>
+                <div class="social-follow__item">
+                  <a href="#" class="social-follow__link">
+                    <img src="@img/follow/inst.svg" alt="icon" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       @@include('html/_footer.htm',{})
     </div>
