--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,60 @@
           </div>
         </section>
 
+        <section class="reviews">
+          <div class="reviews__container">
+            <div class="reviews__title">ОТЗЫВЫ</div>
+            <div class="reviews__content">
+              <div class="reviews__item item-reviews">
+                <div class="item-reviews__raiting">
+                  <img src="@img/reviews/raiting.svg" alt="raiting" />
+                </div>
+                <div class="item-reviews__title">Лилия Нилова</div>
+                <div class="item-reviews__text">
+                  Времена меняются, а встречают по-прежнему по одежке… Не удивительно, что
+                  мужчинам всегда хочется одеваться не просто красиво, а еще и модно. Но
+                  тренды меняются с такой завидной скоростью, что порой не успеваешь за
+                  ними уследить,...
+                </div>
+                <div class="item-item-reviews__date">29.04.2020</div>
+              </div>
+              <div class="reviews__item item-reviews">
+                <div class="item-reviews__raiting">
+                  <img src="@img/reviews/raiting.svg" alt="raiting" />
+                </div>
+                <div class="item-reviews__title">Лилия Нилова</div>
+                <div class="item-reviews__text">
+                  Времена меняются, а встречают по-прежнему по одежке… Не удивительно, что
+                  мужчинам всегда хочется одеваться не просто красиво, а еще и модно. Но
+                  тренды меняются с такой завидной скоростью, что порой не успеваешь за
+                  ними уследить,...
+                </div>
+                <div class="item-reviews__date">29.04.2020</div>
+              </div>
+            </div>
+
+            <div class="reviews__more">БОЛЬШЕ ОТЗЫВОВ</div>
+
+            <div class="reviews__text">
+              <p>
+                ТМ «HECTOR» - украинский производитель качественной мужской одежды,
+                который более 10 лет разрабатывает и выпускает широкий ассортимент моделей
+                с использованием натуральных тканей и фурнитуры. При помощи современного
+                оборудования на изделия наносятся вышивка, принты и другие декоративные
+                элементы. Одним из наиважнейших аспектов нашего производства является
+                контроль качества каждого изделия на всех этапах. Мужскую одежду от Hector
+                можно купить оптом или в розницу. Наши представительства находятся в г.
+                Хмельницкий, Одесса, Харьков. Наш интернет-магазин мужской одежды работает
+                с доставкой по всей территории Украины. В представленных каталогах можно
+                найти: футболки, поло, лонгсливы, свитшоты, регланы, спортивную одежду и
+                многое другое. Частое обновление коллекций, удобная система выбора и
+                подробное описание товара, доступные цены, система скидок, предоставляемых
+                «HECTOR» <span>показать полностью</span>
+              </p>
+            </div>
+          </div>
+        </section>
+
         <section class="follow">
           <div class="follow__container">
             <div class="follow__form">
