create section news

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,62 @@
           </div>
         </section>
 
+        <section class="news">
+          <div class="news__container">
+            <div class="news__content content-news">
+              <div class="content-news__title title">НАШИ НОВОСТИ</div>
+              <div class="content-news__item">
+                <div class="content-news__subtitle">
+                  Trends time: ключевые тренды в мужской одежде на 2020 год
+                </div>
+                <div class="content-news__text">
+                  Времена меняются, а встречают по-прежнему по одежке… Не удивительно, что
+                  мужчинам всегда хочется одеваться не просто красиво, а еще и модно. Но
+                  тренды меняются с такой завидной скоростью, что порой не успеваешь за
+                  ними уследить,...
+                </div>
+                <div class="content-news__read">ЧИТАТЬ</div>
+              </div>
+
+              <div class="content-news__item">
+                <div class="content-news__subtitle">
+                  Trends time: ключевые тренды в мужской одежде на 2020 год
+                </div>
+                <div class="content-news__text">
+                  Времена меняются, а встречают по-прежнему по одежке… Не удивительно, что
+                  мужчинам всегда хочется одеваться не просто красиво, а еще и модно. Но
+                  тренды меняются с такой завидной скоростью, что порой не успеваешь за
+                  ними уследить,...
+                </div>
+                <div class="content-news__read">ЧИТАТЬ</div>
+              </div>
+
+              <div class="content-news__item">
+                <div class="content-news__subtitle">
+                  Trends time: ключевые тренды в мужской одежде на 2020 год
+                </div>
+                <div class="content-news__text">
+                  Времена меняются, а встречают по-прежнему по одежке… Не удивительно, что
+                  мужчинам всегда хочется одеваться не просто красиво, а еще и модно. Но
+                  тренды меняются с такой завидной скоростью, что порой не успеваешь за
+                  ними уследить,...
+                </div>
+                <div class="content-news__read">ЧИТАТЬ</div>
+              </div>
+              <div class="content-news__more">БОЛЬШЕ НОВОСТЕЙ</div>
+            </div>
+
+            <div class="news__bg">
+              <div class="news__image">
+                <img src="@img/news/man.png" alt="man" />
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="reviews">
           <div class="reviews__container">
-            <div class="reviews__title">ОТЗЫВЫ</div>
+            <div class="reviews__title title">ОТЗЫВЫ</div>
             <div class="reviews__content">
               <div class="reviews__item item-reviews">
                 <div class="item-reviews__raiting">
