create best page

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,217 @@
           </div>
         </section>
 
+        <section class="best">
+          <div class="best__container">
+            <div class="best__wrap">
+              <div class="best__title title">ЛУЧШИЕ ПРЕДЛОЖЕНИЯ</div>
+              <a href="#" class="best__text text">ПЕРЕЙТИ В КАТАЛОГ</a>
+            </div>
+
+            <div class="best__items">
+              <div class="best__item item-card">
+                <div class="item-card__labels labels">
+                  <div class="labels__text">New</div>
+                </div>
+                <div class="item-card__image">
+                  <img src="@img/best/man-best.png" alt="man" />
+                </div>
+                <div class="item-card__content">
+                  <div class="item-card__colors">
+                    <img src="@img/best/colors.svg" alt="colors" />
+                  </div>
+                  <div class="item-card__wrap">
+                    <div class="item-card__raiting">
+                      <img src="@img/reviews/raiting.svg" alt="raiting" />
+                    </div>
+                    <div class="item-card__text">S M L</div>
+                  </div>
+                  <div class="item-card__subtitle">Футболка мужская Exclusive 22032</div>
+                  <div class="item-card__price">245₴</div>
+                  <div class="item-card__btn">
+                    <a href="#" class="item-card__button">ВЫБРАТЬ РАЗМЕР</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="best__item item-card">
+                <div class="item-card__labels labels">
+                  <div class="labels__text">New</div>
+                </div>
+                <div class="item-card__image">
+                  <img src="@img/best/man-best.png" alt="man" />
+                </div>
+                <div class="item-card__content">
+                  <div class="item-card__colors">
+                    <img src="@img/best/colors.svg" alt="colors" />
+                  </div>
+                  <div class="item-card__wrap">
+                    <div class="item-card__raiting">
+                      <img src="@img/reviews/raiting.svg" alt="raiting" />
+                    </div>
+                    <div class="item-card__text">S M L</div>
+                  </div>
+                  <div class="item-card__subtitle">Футболка мужская Exclusive 22032</div>
+                  <div class="item-card__price">245₴</div>
+                  <div class="item-card__btn">
+                    <a href="#" class="item-card__button">ВЫБРАТЬ РАЗМЕР</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="best__item item-card">
+                <div class="item-card__labels labels">
+                  <div class="labels__text">New</div>
+                </div>
+                <div class="item-card__image">
+                  <img src="@img/best/man-best.png" alt="man" />
+                </div>
+                <div class="item-card__content">
+                  <div class="item-card__colors">
+                    <img src="@img/best/colors.svg" alt="colors" />
+                  </div>
+                  <div class="item-card__wrap">
+                    <div class="item-card__raiting">
+                      <img src="@img/reviews/raiting.svg" alt="raiting" />
+                    </div>
+                    <div class="item-card__text">S M L</div>
+                  </div>
+                  <div class="item-card__subtitle">Футболка мужская Exclusive 22032</div>
+                  <div class="item-card__price">245₴</div>
+                  <div class="item-card__btn">
+                    <a href="#" class="item-card__button">ВЫБРАТЬ РАЗМЕР</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="best__item item-card">
+                <div class="item-card__labels labels">
+                  <div class="labels__text">New</div>
+                </div>
+                <div class="item-card__image">
+                  <img src="@img/best/man-best.png" alt="man" />
+                </div>
+                <div class="item-card__content">
+                  <div class="item-card__colors">
+                    <img src="@img/best/colors.svg" alt="colors" />
+                  </div>
+                  <div class="item-card__wrap">
+                    <div class="item-card__raiting">
+                      <img src="@img/reviews/raiting.svg" alt="raiting" />
+                    </div>
+                    <div class="item-card__text">S M L</div>
+                  </div>
+                  <div class="item-card__subtitle">Футболка мужская Exclusive 22032</div>
+                  <div class="item-card__price">245₴</div>
+                  <div class="item-card__btn">
+                    <a href="#" class="item-card__button">ВЫБРАТЬ РАЗМЕР</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="best__item item-card">
+                <div class="item-card__labels labels">
+                  <div class="labels__text">New</div>
+                </div>
+                <div class="item-card__image">
+                  <img src="@img/best/man-best.png" alt="man" />
+                </div>
+                <div class="item-card__content">
+                  <div class="item-card__colors">
+                    <img src="@img/best/colors.svg" alt="colors" />
+                  </div>
+                  <div class="item-card__wrap">
+                    <div class="item-card__raiting">
+                      <img src="@img/reviews/raiting.svg" alt="raiting" />
+                    </div>
+                    <div class="item-card__text">S M L</div>
+                  </div>
+                  <div class="item-card__subtitle">Футболка мужская Exclusive 22032</div>
+                  <div class="item-card__price">245₴</div>
+                  <div class="item-card__btn">
+                    <a href="#" class="item-card__button">ВЫБРАТЬ РАЗМЕР</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="best__item item-card">
+                <div class="item-card__labels labels">
+                  <div class="labels__text">New</div>
+                </div>
+                <div class="item-card__image">
+                  <img src="@img/best/man-best.png" alt="man" />
+                </div>
+                <div class="item-card__content">
+                  <div class="item-card__colors">
+                    <img src="@img/best/colors.svg" alt="colors" />
+                  </div>
+                  <div class="item-card__wrap">
+                    <div class="item-card__raiting">
+                      <img src="@img/reviews/raiting.svg" alt="raiting" />
+                    </div>
+                    <div class="item-card__text">S M L</div>
+                  </div>
+                  <div class="item-card__subtitle">Футболка мужская Exclusive 22032</div>
+                  <div class="item-card__price">245₴</div>
+                  <div class="item-card__btn">
+                    <a href="#" class="item-card__button">ВЫБРАТЬ РАЗМЕР</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="best__item item-card">
+                <div class="item-card__labels labels">
+                  <div class="labels__text">New</div>
+                </div>
+                <div class="item-card__image">
+                  <img src="@img/best/man-best.png" alt="man" />
+                </div>
+                <div class="item-card__content">
+                  <div class="item-card__colors">
+                    <img src="@img/best/colors.svg" alt="colors" />
+                  </div>
+                  <div class="item-card__wrap">
+                    <div class="item-card__raiting">
+                      <img src="@img/reviews/raiting.svg" alt="raiting" />
+                    </div>
+                    <div class="item-card__text">S M L</div>
+                  </div>
+                  <div class="item-card__subtitle">Футболка мужская Exclusive 22032</div>
+                  <div class="item-card__price">245₴</div>
+                  <div class="item-card__btn">
+                    <a href="#" class="item-card__button">ВЫБРАТЬ РАЗМЕР</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="best__item item-card">
+                <div class="item-card__labels labels">
+                  <div class="labels__text">New</div>
+                </div>
+                <div class="item-card__image">
+                  <img src="@img/best/man-best.png" alt="man" />
+                </div>
+                <div class="item-card__content">
+                  <div class="item-card__colors">
+                    <img src="@img/best/colors.svg" alt="colors" />
+                  </div>
+                  <div class="item-card__wrap">
+                    <div class="item-card__raiting">
+                      <img src="@img/reviews/raiting.svg" alt="raiting" />
+                    </div>
+                    <div class="item-card__text">S M L</div>
+                  </div>
+                  <div class="item-card__subtitle">Футболка мужская Exclusive 22032</div>
+                  <div class="item-card__price">245₴</div>
+                  <div class="item-card__btn">
+                    <a href="#" class="item-card__button">ВЫБРАТЬ РАЗМЕР</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="news">
           <div class="news__container">
             <div class="news__content content-news">
