create page sale

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,70 @@
           </div>
         </section>
 
+        <section class="sale">
+          <div class="sale__container">
+            <div class="sale__wrap">
+              <div class="sale__title title">ЛУЧШИЕ ПРЕДЛОЖЕНИЯ</div>
+              <a href="#" class="sale__text text">ПЕРЕЙТИ В КАТАЛОГ</a>
+            </div>
+
+            <div class="sale__items">
+              <div class="sale__item item-sale">
+                <div class="item-sale__image">
+                  <img src="@img/sale/sale-image.png" alt="sale" />
+                </div>
+                <div class="item-sale__info">
+                  <div class="item-sale__row">
+                    <div class="item-sale__title">Бесплатая доставка</div>
+                    <div class="item-sale__text">
+                      Заказов от 500 грн, при условии полной оплаты на карту
+                    </div>
+                  </div>
+
+                  <div class="item-sale__link">
+                    <div class="item-sale__more">ПОДРОБНЕЕ</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="sale__item item-sale">
+                <div class="item-sale__image">
+                  <img src="@img/sale/sale-image.png" alt="sale" />
+                </div>
+                <div class="item-sale__info">
+                  <div class="item-sale__row">
+                    <div class="item-sale__title">Бесплатая доставка</div>
+                    <div class="item-sale__text">
+                      Заказов от 500 грн, при условии полной оплаты на карту
+                    </div>
+                  </div>
+
+                  <div class="item-sale__link">
+                    <div class="item-sale__more">ПОДРОБНЕЕ</div>
+                  </div>
+                </div>
+              </div>
+              <div class="sale__item item-sale">
+                <div class="item-sale__image">
+                  <img src="@img/sale/sale-image.png" alt="sale" />
+                </div>
+                <div class="item-sale__info">
+                  <div class="item-sale__row">
+                    <div class="item-sale__title">Бесплатая доставка</div>
+                    <div class="item-sale__text">
+                      Заказов от 500 грн, при условии полной оплаты на карту
+                    </div>
+                  </div>
+
+                  <div class="item-sale__link">
+                    <div class="item-sale__more">ПОДРОБНЕЕ</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="best">
           <div class="best__container">
             <div class="best__wrap">
