--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,3 +1,43 @@
 <header class="header">
-  <div class="header__container"></div>
+  <div class="header__container">
+    <div class="header__logo">
+      <img src="@img/logo vector 1.svg" alt="logo" />
+    </div>
+    <nav class="header__navigation">
+      <a href="" class="header__link">
+        КАТАЛОГ
+        <img src="@img/icons/arrow.svg" alt="arrow" />
+      </a>
+      <a href="" class="header__link">
+        КЛИЕНТАМ
+        <img src="@img/icons/burger.svg" alt="burger" />
+      </a>
+      <a href="" class="header__link">SALE</a>
+      <a href="" class="header__link">
+        КОМПЛЕКТЫ ОДЕЖДЫ
+        <img src="@img/icons/arrow.svg" alt="arrow" />
+      </a>
+    </nav>
+    <div class="header__details">
+      <a href="" class="header__language">
+        УКР
+        <img src="@img/icons/arrow.svg" alt="arrow" />
+      </a>
+      <a href="" class="header__phone link">
+        <img src="@img/icons/phone.svg" alt="Call" />
+      </a>
+      <a href="" class="header__search link">
+        <img src="@img/icons/search.svg" alt="Search" />
+      </a>
+      <a href="" class="header__like link">
+        <img src="@img/icons/heart.svg" alt="Heart" />
+      </a>
+      <a href="" class="header__cart link">
+        <img src="@img/icons/cart.svg" alt="Cart" />
+      </a>
+      <a href="" class="header__profile link">
+        <img src="@img/icons/user.svg" alt="User" />
+      </a>
+    </div>
+  </div>
 </header>
