--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -56,7 +56,31 @@
           </div>
 
           <div class="menu-footer__social social-footer">
-            <div class="social-footer__items"></div>
+            <div class="social-footer__items">
+              <div class="social-footer__item">
+                <img src="@img/footer/icons/fab.fa-viber.svg" alt="icon" />
+              </div>
+              <div class="social-footer__item">
+                <img src="@img/footer/icons/telegram.svg" alt="icon" />
+              </div>
+              <div class="social-footer__item">
+                <img src="@img/footer/icons/fab.fa-whatsapp.svg" alt="icon" />
+              </div>
+
+              <div class="social-footer__border"></div>
+
+              <div class="social-footer__item">
+                <img src="@img/footer/icons/post.svg" alt="icon" />
+              </div>
+
+              <div class="social-footer__item">
+                <img src="@img/footer/icons/faceb.svg" alt="icon" />
+              </div>
+
+              <div class="social-footer__item">
+                <img src="@img/footer/icons/instagram.svg" alt="icon" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -76,9 +100,9 @@
 
         <div class="down-footer__design">
           <div class="down-footer__text">Design and development</div>
-          <div class="down-footer__icon">
+          <a href="#" class="down-footer__icon">
             <img src="@img/footer/logo-galaxy.svg" alt="footer" />
-          </div>
+          </a>
         </div>
       </div>
     </div>
