--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -19,23 +19,23 @@
       </a>
     </nav>
     <div class="header__details">
-      <a href="" class="header__language">
+      <a href="#" class="header__language">
         УКР
         <img src="@img/icons/arrow.svg" alt="arrow" />
       </a>
-      <a href="" class="header__phone link">
+      <a href="#" class="header__phone link">
         <img src="@img/icons/phone.svg" alt="Call" />
       </a>
-      <a href="" class="header__search link">
+      <a href="#" class="header__search link">
         <img src="@img/icons/search.svg" alt="Search" />
       </a>
-      <a href="" class="header__like link">
+      <a href="#" class="header__like link">
         <img src="@img/icons/heart.svg" alt="Heart" />
       </a>
-      <a href="" class="header__cart link">
+      <a href="#" class="header__cart link">
         <img src="@img/icons/cart.svg" alt="Cart" />
       </a>
-      <a href="" class="header__profile link">
+      <a href="#" class="header__profile link">
         <img src="@img/icons/user.svg" alt="User" />
       </a>
     </div>
