--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
             </div>
             <div class="main-page__button">ПОДРОБНЕЕ</div>
             <div class="main-page__count">
-              <a href="" class="main-page__arrow-left">
+              <a href="" class="main-page__arrow">
                 <img src="@img/icons/arrow.svg" alt="arrow-left" />
               </a>
               <span>02</span>
-              <a href="" class="main-page__arrow-right">
+              <a href="" class="main-page__arrow main-page__arrow-right">
                 <img src="@img/icons/arrow.svg" alt="arrow-right" />
               </a>
             </div>
