--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,43 @@
   <body>
     <div class="wrapper">
       <main class="page">
-        <section class="page__main main-page">
-          @@include('html/_header.htm',{})
-          <div class="main-page__container">
-            <div class="main-page__title">МУЖСКАЯ</div>
-            <div class="main-page__title main-page__title_right">КОЛЛЕКЦИЯ</div>
-            <div class="main-page__subtitle">
-              Распродажа коллекций со скидками до 50%, доставка до вашего склада
-            </div>
-            <div class="main-page__button">ПОДРОБНЕЕ</div>
-            <div class="main-page__count">
-              <a href="" class="main-page__arrow">
-                <img src="@img/icons/arrow.svg" alt="arrow-left" />
-              </a>
-              <span>02</span>
-              <a href="" class="main-page__arrow main-page__arrow-right">
-                <img src="@img/icons/arrow.svg" alt="arrow-right" />
-              </a>
+        @@include('html/_header.htm',{})
+        <section class="page__main main">
+          <div class="main__slider swiper">
+            <div class="main__wrapper swiper-wrapper">
+              <div class="main__slide slider-main swiper-slide">
+                <img class="slider-main__bg" src="@img/main.jpg" alt="image" />
+                <div class="slider-main__container">
+                  <div class="slider-main__title">МУЖСКАЯ</div>
+                  <div class="slider-main__title slider-main__title_right">КОЛЛЕКЦИЯ</div>
+                  <div class="slider-main__subtitle">
+                    Распродажа коллекций со скидками до 50%, доставка до вашего склада
+                  </div>
+                  <div class="slider-main__button">ПОДРОБНЕЕ</div>
+                </div>
+              </div>
+
+              <div class="main__slide slider-main swiper-slide">
+                <img class="slider-main__bg" src="@img/main-2.png" alt="image" />
+                <div class="slider-main__container">
+                  <div class="slider-main__title">МУЖСКАЯ</div>
+                  <div class="slider-main__title slider-main__title_right">КОЛЛЕКЦИЯ</div>
+                  <div class="slider-main__subtitle">
+                    Распродажа коллекций со скидками до 50%, доставка до вашего склада
+                  </div>
+                  <div class="slider-main__button">ПОДРОБНЕЕ</div>
+                </div>
+              </div>
+
+              <div class="slider-main__buttons slider-buttons">
+                <a href="#" class="slider-buttons__arrow">
+                  <img src="@img/icons/arrow.svg" alt="arrow-left" />
+                </a>
+                <span>02</span>
+                <a href="#" class="slider-buttons__arrow-right">
+                  <img src="@img/icons/arrow.svg" alt="arrow-right" />
+                </a>
+              </div>
             </div>
           </div>
         </section>
