add autoplay to swiper

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
                 <img class="slider-main__bg" src="@img/main.jpg" alt="image" />
                 <div class="slider-main__container">
                   <div class="slider-main__title">МУЖСКАЯ</div>
-                  <div class="slider-main__title slider-main__title_right">КОЛЛЕКЦИЯ</div>
+                  <div class="slider-main__title">КОЛЛЕКЦИЯ</div>
                   <div class="slider-main__subtitle">
                     Распродажа коллекций со скидками до 50%, доставка до вашего склада
                   </div>
@@ -24,23 +24,22 @@
                 <img class="slider-main__bg" src="@img/main-2.png" alt="image" />
                 <div class="slider-main__container">
                   <div class="slider-main__title">МУЖСКАЯ</div>
-                  <div class="slider-main__title slider-main__title_right">КОЛЛЕКЦИЯ</div>
+                  <div class="slider-main__title">КОЛЛЕКЦИЯ</div>
                   <div class="slider-main__subtitle">
                     Распродажа коллекций со скидками до 50%, доставка до вашего склада
                   </div>
                   <div class="slider-main__button">ПОДРОБНЕЕ</div>
                 </div>
               </div>
-
-              <div class="slider-main__buttons slider-buttons">
-                <a href="#" class="slider-buttons__arrow">
-                  <img src="@img/icons/arrow.svg" alt="arrow-left" />
-                </a>
-                <span>02</span>
-                <a href="#" class="slider-buttons__arrow-right">
-                  <img src="@img/icons/arrow.svg" alt="arrow-right" />
-                </a>
-              </div>
+            </div>
+            <div class="slider-main__buttons slider-buttons">
+              <a href="#" class="slider-buttons__arrow">
+                <img src="@img/icons/arrow.svg" alt="arrow-left" />
+              </a>
+              <span>02</span>
+              <a href="#" class="slider-buttons__arrow-right">
+                <img src="@img/icons/arrow.svg" alt="arrow-right" />
+              </a>
             </div>
           </div>
         </section>
